# docker-rust-postgres

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-rust-kubernetes.yaml
queries/: user_create.sql  user_list.sql
src/: db.rs  main.rs  migrate.rs  postgres.rs  user.rs
