[package]
name = "react-rust-postgres"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>","iadeveloper <iadeveloper@hotmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.5.1"
env_logger = "^0.11.3"
log = "^0.4"
serde = { version = "^1.0.2", features = ["derive"] }
serde_json = "^1.0.116"
tokio-postgres = "^0.7"
deadpool-postgres = {version="~0.13.0", features=["serde","rt_tokio_1"]}
tokio-pg-mapper = { version = "^0.2.0", features = ["tokio-pg-mapper-derive", "derive"] }
tokio-pg-mapper-derive = "^0.2.0"
tokio-postgres-migration = "^0.1.0"
derive_more = "^0.99.17"
dotenv = "^0.15.0"
